--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -124,8 +124,29 @@
                                 <field name="smtp_port"/>
                             </group>
                             <group>
-                                <field name="gdrive_account"/>
-                                <field name="gdrive_passw"/>
+                                <label for="gdrive_account"/>
+                                <div>
+                                    <field
+                                        name="gdrive_account"
+                                        password="True"
+                                        class="oe_inline"/>
+                                    <button name="configure_gdrive_sync"
+                                        string="⇒ Configure"
+                                        type="object"
+                                        states="draft,to_install"
+                                        class="oe_link"/>
+                                </div>
+                                <label for="gdrive_passw"/>
+                                <div>
+                                    <field
+                                        name="gdrive_passw"
+                                        password="True"
+                                        class="oe_inline"/>
+                                    <button name="show_gdrive_passwd"
+                                        string="⇒ View Password"
+                                        type="object"
+                                        class="oe_link"/>
+                                </div>
                                 <field name="gdrive_space"/>
                             </group>
                         </group>
@@ -136,6 +157,7 @@
                                 <field name="ip_address"/>
                                 <field name="base_path"/>
                                 <field name="backups_path"/>
+                                <field name="syncked_backups_path"/>
                                 <field name="mailgate_file"/>
                                 <field name="nginx_sites_path"/>
                                 <field name="nginx_log_path"/>
