IMP add default log level

--- a/infrastructure/view/database_type_view.xml
+++ b/infrastructure/view/database_type_view.xml
@@ -38,6 +38,7 @@
                 <field name="workers"/>
                 <field name="workers_number" attrs="{'invisible':[('workers','=','clasic_rule')],'required':[('workers','!=','clasic_rule')]}"/>
                 <label for="instance_admin_pass"/>
+                <field name="instance_log_level"/>
                 <div>
                     <field
                         name="instance_admin_pass"
