--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -79,7 +79,7 @@
                     <button icon="fa-sun-o" type="object" string="Create" class="oe_inline oe_stat_button" name="create_db" states="draft"/>
                     <button icon="fa-download" type="action" string="Backup Now" class="oe_inline oe_stat_button" name="%(action_infrastructure_backup_now_wizard)d" states="active"/>
                     <button icon="fa-copy" type="action" string="Duplicate" class="oe_stat_button" name="%(action_infrastructure_duplicate_db_wizard)d" states="active"/>
-                    <button icon="fa-trash-o" type="object" string="Drop" class="oe_stat_button" name="drop_db" states="active" confirm="Are you sure you want to drop this database? This can not be undone"/>
+                    <button icon="fa-trash-o" type="action" string="Drop" class="oe_stat_button" name="%(action_infrastructure_database_drop_wizard)d" states="active"/>
                     <button icon="fa-pencil" type="action" string="Rename" class="oe_stat_button" name="%(action_infrastructure_rename_database_wizard)d" states="active"/>
                     <button icon="fa-key" type="action" string="Change Pass" class="oe_stat_button" name="%(action_infrastructure_change_db_passwd_wizard)d" states="active"/>
                     <button icon="fa-arrow-circle-up" type="action" string="Restore" class="oe_stat_button" name="%(action_infrastructure_restore_from_file_wizard)d" states="draft"/>
