--- a/infrastructure/view/database_backup_view.xml
+++ b/infrastructure/view/database_backup_view.xml
@@ -22,6 +22,7 @@
                     <field name="name"/>
                     <field name="type"/>
                     <field name="path"/>
+                    <field name="keep_till_date"/>
                 </group>
             </sheet>
         </form>
@@ -37,6 +38,7 @@
             <field name="date"/>
             <field name="name"/>
             <field name="type"/>
+            <field name="keep_till_date"/>
             <button
                 string="Restore Database"
                 icon="gtk-go-up"
