--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -16,6 +16,7 @@
             <field name="environment_id"/>
             <field name="instance_id"/>
             <field name="update_state"/>
+            <field name="overall_state"/>
             <filter string="Not Cancel" name="not_cancel" domain="[('state','!=','cancel')]"/>
             <group expand="0" string="Group By...">
                 <filter string="Partner" context="{'group_by':'partner_id'}"/>
@@ -24,6 +25,7 @@
                 <filter string="Environment" context="{'group_by':'environment_id'}"/>
                 <filter string="Instance" context="{'group_by':'instance_id'}"/>
                 <filter string="Update State" context="{'group_by':'update_state'}"/>
+                <filter string="Overall State" context="{'group_by':'overall_state'}"/>
             </group>
         </search>
     </field>
@@ -148,6 +150,7 @@
                         <field name="issue_date"/>
                         <field name="deactivation_date"/>
                         <field name="drop_date"/>
+                        <field name="check_database"/>
                     </group>
                  </group>
                 <notebook>
@@ -217,7 +220,7 @@
     <field name="arch" type="xml">
         <tree string="database"
             fonts="bold:message_unread==True"
-            colors="red:update_state not in  ('ok', 'optional_update'); grey:state=='cancelled';blue:state in ('draft',); black:state in ('active', 'deactivated', 'maintenance')"
+            colors="red:overall_state =  'error'; grey:state=='cancelled';blue:state in ('draft',); black:state in ('active', 'deactivated', 'maintenance')"
             >
             <field name="message_unread" invisible="1"/>
             <field name="database_type_id"/>
@@ -227,7 +230,8 @@
             <field name="environment_id" invisible="1"/>
             <field name="instance_id"/>
             <field name="state"/>
-            <field name="update_state"/>
+            <!-- <field name="update_state"/> -->
+            <field name="overall_state"/>
         </tree>
     </field>
 </record>
@@ -243,13 +247,15 @@
             <field name="color"/>
             <field name="state"/>
             <field name="update_state"/>
+            <field name="overall_state"/>
             <templates>
                 <t t-name="kanban-box">
                     <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card">
                         <div class="oe_kanban_content" style="width: 150px; height: 80px; margin: 0 auto;">
                             <h4 class="text-center"><a type="open"><field name="name"/></a></h4>
                             <a t-att-href="record.main_hostname.value" target="_blank"><field name="main_hostname"/></a>
-                            <h5>Update Status:<field name="update_state"/></h5>
+                            <!-- <h5>Update Status:<field name="update_state"/></h5> -->
+                            <h5>Overall Status:<field name="overall_state"/></h5>
                         </div>
                         <div class="oe_clear"/> 
                     </div>
@@ -270,6 +276,17 @@
     <field name="context">{'search_default_not_cancel': 1}</field>
 </record>
 
+<record id="action_infrastructure_databases_to_correct" model="ir.actions.act_window">
+    <field name="name">Databases To Correct</field>
+    <field name="res_model">infrastructure.database</field>
+    <field name="view_type">form</field>
+    <field name="view_mode">kanban,tree,form</field>
+    <field name="view_id" ref="view_database_kanban"/>
+    <field name="search_view_id" ref="view_infrastructure_database_filter"/>
+    <field name="domain">[]</field>
+    <field name="context">{'search_default_overall_state': 'error'}</field>
+</record>
+
 <menuitem
     name="Databases"
     id="menu_databases"
@@ -277,6 +294,13 @@
     action="action_infrastructure_database_databases"
     parent="menu_infra_main"
     groups="group_user"
+    />
+
+<menuitem
+    id="menu_databases_to_correct"
+    sequence="5"
+    action="action_infrastructure_databases_to_correct"
+    parent="menu_infra_main"
     />
 
 <menuitem
