--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -16,8 +16,10 @@
             <field name="environment_id"/>
             <field name="instance_id"/>
             <field name="update_state"/>
+            <filter string="Check Database" name="check_database" domain="[('check_database', '=', True)]"/>
             <field name="overall_state"/>
             <filter string="Not Cancel" name="not_cancel" domain="[('state','!=','cancel')]"/>
+            <!-- <filter string="Not Cancel" name="check_database" domain="[('check_database', '=', True)]"/> -->
             <group expand="0" string="Group By...">
                 <filter string="Partner" context="{'group_by':'partner_id'}"/>
                 <filter string="Type" context="{'group_by':'database_type_id'}"/>
@@ -295,7 +297,7 @@
     <field name="view_id" ref="view_database_kanban"/>
     <field name="search_view_id" ref="view_infrastructure_database_filter"/>
     <field name="domain">[]</field>
-    <field name="context">{'search_default_overall_state': 'error'}</field>
+    <field name="context">{'search_default_overall_state': 'error', 'search_default_check_database': True}</field>
 </record>
 
 <menuitem
