--- a/infrastructure/view/mailserver_view.xml
+++ b/infrastructure/view/mailserver_view.xml
@@ -31,6 +31,17 @@
             <field name="partner_id"/>
             <field name="external_id"/>
         </field>
+        <sheet position="inside">
+            <label for="database_ids"/>
+            <field name="database_ids">
+                <tree>
+                    <field name="name"/>
+                    <field name="database_type_id"/>
+                    <field name="instance_id"/>
+                    <field name="state"/>
+                </tree>
+            </field>
+        </sheet>
     </field>
 </record>
 
